# goose_mcp

./: README.md
bookwyrm_mcp/: README.md  pyproject.toml
bookwyrm_mcp/src/bookwyrm_mcp/: __init__.py  __main__.py  server.py
mcp_chromedriver/: README.md  pyproject.toml
mcp_chromedriver/src/mcp_chromedriver/: __init__.py  __main__.py  server.py
mcp_doctl/: README.md  pyproject.toml
mcp_doctl/src/mcp_doctl/: __init__.py  __main__.py  server.py
mcp_fark/: README.md  pyproject.toml
mcp_fark/src/mcp_fark/: __init__.py  __main__.py  server.py
mcp_plex/: README.md  pyproject.toml
mcp_plex/src/mcp_plex/: __init__.py  __main__.py  server.py
mcp_rt/: README.md  pyproject.toml
mcp_rt/src/mcp_rt/: __init__.py  __main__.py  server.py
mcp_sales_history/: README.md  pyproject.toml
mcp_sales_history/src/mcp_sales_history/: __init__.py  __main__.py  server.py
mcp_searxng_search/: README.md  pyproject.toml
mcp_searxng_search/src/mcp_searxng_search/: server.py
mcp_taskwarrior/: README.md  pyproject.toml
mcp_taskwarrior/src/mcp_taskwarrior/: __init__.py  __main__.py  server.py
mcp_terminal_shop/: README.md  pyproject.toml
mcp_terminal_shop/src/mcp_terminal_shop/: __init__.py  __main__.py  server.py
mcp_vollama/: README.md  pyproject.toml
mcp_vollama/src/mcp_vollama/: __init__.py  __main__.py  server.py
mcp_ytdlp/: README.md  pyproject.toml
mcp_ytdlp/srv/mcp_ytdlp/: __init__.py  __main__.py  server.py
