[project]
name = "bookwyrm_mcp"
version = "0.1.0"
description = "MCP Server for Bookwyrm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
]
[project.scripts]
bookwyrm-mcp = "bookwyrm_mcp:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
