[project]
name = "mcp_plex"
version = "0.1.0"
description = "MCP Server for Plex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
    "xmltodict>=0.13.0"
]

[project.scripts]
mcp_plex = "mcp_plex:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
